--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@vue/composition-api": "^0.3.4",
+    "axios": "^0.19.1",
     "core-js": "^3.4.4",
     "element-ui": "^2.4.5",
     "vue": "^2.6.10",
